--- a/nav.css
+++ b/nav.css
@@ -1,6 +1,37 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+ul li {
+  list-style: none;
+}
+
 body{
-  margin-left: 8%;
-  margin-right: 8%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 62.5%;
+  margin: 0px;
+  padding: 0px;
+  background-image: url(../images/bodybg.gif);
+  background-repeat: repeat-y;
+  background-position: center;
+  background-color: #eaeaea;
+}
+
+#topnavcontainter {
+
+  background-image: url("../images/redgradient.gif");
+
+  background-repeat: repeat-x;
+
+  height: 30px;
+
+  background-color: #211545
+
+  margin-left: auto;
+
+  margin-right: auto;
+
 }
 
 .logo img{
