--- a/nav.css
+++ b/nav.css
@@ -34,6 +34,41 @@ body{
 
 }
 
+#topnav {
+
+  width: 955px;
+
+  margin-right: auto;
+
+  margin-left: auto;
+
+}
+
+#topnavcontainter #topnav  #utility {
+
+  padding-top: 3px;
+
+  top: 0px;
+
+  text-align: right;
+
+  float: left;
+
+  margin-top: 5px;
+
+  border-bottom: none;
+}
+
+#utility ul {
+  list-style: none;
+
+  margin: 0;
+
+  padding: 0;
+
+  display: inline;
+}
+
 .logo img{
   height: 8rem;
   width: 13rem;
