--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@ ul li {
   list-style: none;
 }
 
+.y1 { background:yellow; }
+
 body{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 62.5%;
@@ -68,8 +70,6 @@ body{
 #utility ul li.first {
   padding-left: 0;
 }
-
-
 
 #utility ul li.last {
   padding-right: 22px;
@@ -210,6 +210,66 @@ div#contentwrap #content .content-left .content-left1 .content-left-wrap div ul{
   line-height: 160%;
   color: rgb(1,73,131);
 }
+
+.content-right{
+  margin: 40px auto;
+  width: 314px;
+  float: left;
+  padding: 5px;
+}
+
+div#contentwrap #content .content-left .content-left1 .content-left-top button:hover{
+  cursor: pointer;
+}
+
+div#contentwrap #content .content-right .content-left1 .content-left-top button:hover{
+  cursor: pointer;
+}
+div#contentwrap #content .content-right .content-left1 .content-left-top button{
+
+  width: 314px;
+
+  height: 62px;
+
+  background-color: #211545;
+
+  color: #fff;
+
+  line-height: 62px;
+
+  font-size: 20px;
+
+  left: 45px;
+
+  margin: 2px;
+}
+
+
+div#contentwrap #content .content-right .content-left1 .content-left-wrap div{
+
+  margin: 0;
+
+  border: 1px solid #E1E1E1;
+
+  border-top: 0;
+
+  color: rgb(1,73,131);
+
+  padding: 20px 20px;
+
+}
+
+div#contentwrap #content .content-right .content-left1 .content-left-wrap div p{
+  color: rgb(1,73,131);
+}
+
+div#contentwrap #content .content-right .content-left1 .content-left-wrap div ul{
+  font-size: 140%;
+  line-height: 160%;
+  color: rgb(1,73,131);
+}
+
+
 #sidebarnav {
   margin: 10px;
   width: 250px;
