--- a/css/main.css
+++ b/css/main.css
@@ -1,322 +1,188 @@
 *{
-  margin: 0px;
-  padding: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Times New Roman", Times, serif;
 }
 
-ul li {
-  list-style: none;
+.html {
+    background-color: #fff;
+    font-weight: 300;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
 }
 
-.y1 { background:yellow; }
-
-body{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 62.5%;
-  margin: 0px;
-  padding: 0px;
-  background-image: url("../images/bodybg.gif");
-  background-repeat: repeat-y;
-  background-position: center;
-  background-color: #eaeaea;
-}
-
-#topnavcontainter {
-  background-image: url("../images/redgradient.gif");
-  background-repeat: repeat-x;
-  height: 30px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#topnav {
-  width: 955px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-#topnavcontainter #topnav  #utility {
-  padding-top: 3px;
-  top: 0px;
-  text-align: right;
-  float: left;
-  margin-top: 5px;
-  border-bottom: none;
-}
-
-#utility ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: inline;
-}
-
-#utility ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: inline;
-}
-
-#utility ul li {
-  border-right: 1px solid #dfdfdf;
-  font-size: 12px;
-  display: inline;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding-right: 8px;
-  padding-left: 8px;
-}
-
-#utility ul li.first {
-  padding-left: 0;
-}
-
-#utility ul li.last {
-  padding-right: 22px;
-  border: 0;
-  margin-left: 0px;
-}
-
-#utility ul li a {
-  padding-bottom: 1px;
-  text-decoration: none;
-  color: #FFF;
-}
-
-#utility ul li a:hover {
-  text-decoration: underline;
-}
-
-.ico-key {
-  background: url("../images/ico-key.png") no-repeat 0 10px transparent;
-  padding-left: 30px;
-  float: right;
-  font-size: 120%;
-  color: #fff;
-  padding-top: 8px;
-  padding-right: 5px;
-  text-decoration: none;
-}
-
-/*wrapper*/
-
-#wrapper {
-  width: 955px;
-  margin-right: auto;
-  margin-left: auto;
-  /*overflow: hidden;*/
-}
-
-#header {
-  height: 120px;
-  margin-bottom: 40px;
-}
-
-#cdulogo {
-  float: left;
-  height: 120px;
-  width: 406px;
-  margin-top: 20px;
-  margin-left: 15px;
-}
-
-#search{
-  margin-top: 110px;
-  right: 8px;
-  text-align: left;
-  float: right;
-  margin-right: 15px;
-}
-
-#pagetitle {
-  background-color: #123768;
-  height: 60px;
-  text-align: left;
-  background-color: #211545;
-  background-repeat: no-repeat;
-  background-position: right;
-  margin-top: 15px;
-}
-
-#pagetitle h1 {
-  color: #fff;
-  font: 28px arial, helvetica;
-  line-height: 60px;
-  margin-left: 10px;
-}
-
-div#contentwrap {
-  /*overflow: hidden;*/
-  position: relative;
-  background-image: url(../images/contentbg.gif);
-  background-repeat: repeat-y;
-}
-
-#content {
-  width: 650px;
-  margin-top: 20px;
-  margin-right: 0px;
-  margin-bottom: 10px;
-  margin-left: 20px;
-  float: left;
-}
-
-#content ul li {
-  list-style-type: disc;
-  line-height: 140%;
-  margin-left: 40px;
-}
-
-div#contentwrap #content p {
-  font-size: 140%;
-  line-height: 160%;
-  color: #333;
-}
-
-.content-left{
-  margin: 40px auto;
-  width: 314px;
-  float: left;
-  padding: 5px;
-}
-
-div#contentwrap #content .content-left .content-left1 .content-left-top button{
-  width: 314px;
-  height: 62px;
-  background-color: #211545;
-  color: #fff;
-  line-height: 62px;
-  font-size: 20px;
-  left: 45px;
-  margin: 2px;
+.widthsize{
+    max-width: 1140px;
+    margin:0 auto;
 }
 
 
-div#contentwrap #content .content-left .content-left1 .content-left-wrap div{
-  margin: 0;
-  border: 1px solid #E1E1E1;
-  border-top: 0;
-  color: rgb(1,73,131);
-  padding: 20px 20px;
-
+.header{
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
 
-div#contentwrap #content .content-left .content-left1 .content-left-wrap div p{
-  color: rgb(1,73,131);
+.logo{
+    height: 100px;
+    width: auto;
+    margin-top: 20px;
 }
 
-div#contentwrap #content .content-left .content-left1 .content-left-wrap div ul{
-  font-size: 140%;
-  line-height: 160%;
-  color: rgb(1,73,131);
+.main-nav{
+    list-style: none;
+    background-color: brown;
+    font-size: 120%;
+    border-right: 1px solid #bbb;
 }
 
-.content-right{
-  margin: 40px auto;
-  width: 314px;
-  float: left;
-  padding: 5px;
+.main-nav li{
+    display: inline-block;
+    margin-left: 20px;
+    padding: 15px;
+    border-right:1px solid #bbb;
 }
 
-div#contentwrap #content .content-left .content-left1 .content-left-top button:hover{
-  cursor: pointer;
+.main-nav li a:link,
+.main-nav li a:visited{
+    padding: 8px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom;
 }
 
-div#contentwrap #content .content-right .content-left1 .content-left-top button:hover{
-  cursor: pointer;
+li:last-child {
+    border-right: none;
+    float: right;
 }
-div#contentwrap #content .content-right .content-left1 .content-left-top button{
 
-  width: 314px;
-
-  height: 62px;
-
-  background-color: #211545;
-
-  color: #fff;
-
-  line-height: 62px;
-
-  font-size: 20px;
-
-  left: 45px;
-
-  margin: 2px;
+.searchbar{
+    float: right;
+    margin-top: 80px;
+    padding: 10px;
 }
 
 
-div#contentwrap #content .content-right .content-left1 .content-left-wrap div{
+.logo-mini{
+    height: 20px;
+}
 
-  margin: 0;
+.last-mini-logo{
+    height: 20px;
+    width: 30px;
+    margin-left: 5px;
+}
 
-  border: 1px solid #E1E1E1;
-
-  border-top: 0;
-
-  color: rgb(1,73,131);
-
-  padding: 20px 20px;
+.section-style{
+    margin-top: 40px;
 
 }
 
-div#contentwrap #content .content-right .content-left1 .content-left-wrap div p{
-  color: rgb(1,73,131);
+h2 {
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
 }
 
-div#contentwrap #content .content-right .content-left1 .content-left-wrap div ul{
-  font-size: 140%;
-  line-height: 160%;
-  color: rgb(1,73,131);
+h2:after {
+    display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: " ";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+.long-copy {
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%;
+    margin-top: 10px;
+}
+
+<!--css secion -->
+
+.card{
+    box-shadow:0 4px 8px 0 rgba(0,0,0,0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width:360px;
+    font-size: 16px;
+    margin: 30px;
+    height: 400px;
+    background-color: #ebeef8;
+}
+
+.card-wrapper{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.heading{
+    margin-right: -3px;
+    text-align: center;
+    font-size: 50px;
+    color: #333;
+    font-family: fantasy;
+}
+
+.card-img{
+    height: 200px;
+}
+
+.container{
+    height: 100px;
+    color: #ffffff;
+    margin-top: 30px;
+}
+
+.card h2{
+    text-align: center;
+    color: #333;
 }
 
 
-#sidebarnav {
-  margin: 10px;
-  width: 250px;
-  float: right;
-  background-color: rgba(247,247,247);
-  border-left: 2px solid #ddd;
-}
+@media screen and (min-width: 500px){
+    .card-wrapper{
+        width: 100%;
+        float: left;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
 
-#sidebarnav ul{
-  margin: 0px;
-  padding: 0px;
-}
+<!--Css-sectionend-->
 
-#sidebarnav .sidebarnav-wrap {
-  font-size: inherit;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 0px;
-  /*position: absolute;
-  top: 220px;*/
-  font-size: 140%;
-  line-height: 160%;
-  width: 250px;
-}
+footer {
+        background-color: #fff8f8;
+        position: relative;
+        height: 100px;
+        margin-top: -100px;
+        clear: both;
+        padding: 60px;
+    }
 
-#sidebarnav .sidebarnav-wrap a{
-  display: inline-block;
-  text-decoration: none;
-  color: #333;
-  height: 35px;
-  line-height: 35px;
-  font-size: 15px;
-  text-indent: 1em;
-}
+.social-links{
+        list-style: none;
+        float: right;
+    }
 
-#sidebarnav .sidebarnav-wrap p a:hover{
-  text-decoration: underline;
-}
-
-#sidebarnav .sidebarnav-wrap p,.content-right-top{
-  border-bottom: 1px solid #dfdfdf;
-}
-
-#sidebarnav .sidebarnav-wrap .content-left-wrap div{
-  border-bottom: none;
-}
-
-#sidebarnav .sidebarnav-wrap .content-left-wrap div li{
-  list-style-image: url(../images/tmm_east_gray.gif);
-  text-indent: 1em;
-}
+.social-links li{
+        display: inline-block;
+        margin-right: 20px;
+    }
