add javascript code to make the nav bar more responsive
Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,20 @@
     border-bottom: 2px solid transparent;
     transition: border-bottom;
 }
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255,255,255,0);
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.sticky main-nav li a:link,
+.sticky main-nav li a:visited{
+    padding: 16px 0;
+    color: #fff;
+}
 
 li:last-child {
     border-right: none;
