--- a/css/main.css
+++ b/css/main.css
@@ -1,202 +1,316 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Times New Roman", Times, serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Times New Roman", Times, serif;
 }
 
-.html {
-    background-color: #fff;
-    font-weight: 300;
-    font-size: 20px;
-    text-rendering: optimizeLegibility;
+body {
+  width: 100%;
+  border-style: solid;
+  border-color: black;
 }
 
-.widthsize{
-    max-width: 1140px;
-    margin:0 auto;
+.widthsize {
+  max-width: 100%;
+  margin: 0 auto;
 }
 
-
-.header{
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+.header {
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
 }
 
-.logo{
-    height: 100px;
-    width: auto;
-    margin-top: 20px;
+.logo {
+  height: 110px;
+  width: auto;
+  margin-top: 20px;
 }
 
-.main-nav{
-    list-style: none;
-    background-color: brown;
-    font-size: 120%;
-    border-right: 1px solid #bbb;
+.main-nav {
+  list-style: none;
+  background-color: brown;
+  font-size: 120%;
+  border-right: 1px solid #bbb;
 }
 
-.main-nav li{
-    display: inline-block;
-    margin-left: 20px;
-    padding: 15px;
-    border-right:1px solid #bbb;
+.main-nav li {
+  display: inline-block;
+  margin-left: 20px;
+  padding: 15px;
+  border-right: 1px solid #bbb;
 }
 
 .main-nav li a:link,
-.main-nav li a:visited{
-    padding: 8px 0;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 90%;
-    border-bottom: 2px solid transparent;
-    transition: border-bottom;
+.main-nav li a:visited {
+  padding: 8px 0;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom;
 }
+
 .sticky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(255,255,255,0);
-    box-shadow: 0 2px 2px #efefef;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  box-shadow: 0 2px 2px #efefef;
 }
 
 .sticky main-nav li a:link,
-.sticky main-nav li a:visited{
-    padding: 16px 0;
-    color: #fff;
+.sticky main-nav li a:visited {
+  padding: 16px 0;
+  color: #fff;
 }
 
 li:last-child {
-    border-right: none;
-    float: right;
+  border-right: none;
+  float: right;
 }
 
-.searchbar{
-    float: right;
-    margin-top: 80px;
-    padding: 10px;
+.searchbar {
+  float: right;
+  margin-top: 90px;
+  padding: 5px;
 }
 
-
-.logo-mini{
-    height: 20px;
+.logo-mini {
+  height: 20px;
 }
 
-.last-mini-logo{
-    height: 20px;
-    width: 30px;
-    margin-left: 5px;
+.last-mini-logo {
+  height: 20px;
+  width: 30px;
+  margin-left: 5px;
 }
 
-.section-style{
-    margin-top: 40px;
-
+.section-style {
+  margin-top: 40px;
 }
 
 h2 {
-    font-weight: 300;
-    text-transform: uppercase;
-    font-size: 180%;
-    word-spacing: 2px;
-    text-align: center;
-    margin-bottom: 30px;
-    letter-spacing: 1px;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
 }
 
 h2:after {
-    display: block;
-    height: 2px;
-    background-color: #e67e22;
-    content: " ";
-    width: 100px;
-    margin: 0 auto;
-    margin-top: 30px;
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
 }
 
 .long-copy {
-    line-height: 145%;
-    width: 70%;
-    margin-left: 15%;
-    margin-top: 10px;
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 10px;
 }
 
-/* CSS card section */
+.card-wrapper {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+}
 
-.card{
-    box-shadow:0 4px 8px 0 rgba(0,0,0,0.6);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.card-wrapper-2 {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+}
+
+.heading {
+  margin-right: -3px;
+  text-align: center;
+  font-size: 50px;
+  color: #333;
+  font-family: fantasy;
+}
+
+.card-img {
+  height: 200px;
+}
+
+.container {
+  height: 100px;
+  color: #ffffff;
+  margin-top: 30px;
+}
+
+.card h2 {
+  text-align: center;
+  color: #333;
+}
+
+@media screen and (min-width: 500px) {
+  .card-wrapper {
+    width: 100%;
     float: left;
-    width:360px;
-    font-size: 16px;
-    margin: 30px;
-    height: 400px;
-    background-color: #ebeef8;
-}
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
+  }
 
-.card-wrapper{
-    display: flex;
-    align-items: center;
-    align-content: center;
-    flex-direction: column;
-}
+  @media screen and (min-width: 500px) {
+    .card-wrapper-2 {
+      width: 100%;
+      float: left;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: left;
+      align-items: left;
+    }
 
-.heading{
-    margin-right: -3px;
-    text-align: center;
-    font-size: 50px;
-    color: #333;
-    font-family: fantasy;
-}
-
-.card-img{
-    height: 200px;
-}
-
-.container{
+  /* section edn*/
+  footer {
+    background-color: #fff8f8;
+    position: relative;
     height: 100px;
-    color: #ffffff;
-    margin-top: 30px;
-}
+    margin-top: -100px;
+    clear: both;
+    padding: 60px;
+  }
 
-.card h2{
+  .social-links {
+    list-style: none;
+    float: right;
+  }
+
+  .social-links li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+
+  .card {
+    width: 100%;
+    max-width: 300px;
+    min-width: 200px;
+    height: 250px;
+    background-color: #292929;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+    border: 2px solid rgba(7, 7, 7, 0.12);
+    font-size: 16px;
+    transition: all 0.3s ease;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .icon {
+    margin: 0 auto;
+    width: 100%;
+    height: 80px;
+    max-width: 80px;
+    background: linear-gradient(90deg, #FF7E7E 0%, #FF4848 40%, rgba(0, 0, 0, 0.28) 60%);
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    transition: all 0.8s ease;
+    background-position: 0px;
+    background-size: 200px;
+  }
+
+  .material-icons.md-18 {
+    font-size: 18px;
+  }
+
+  .material-icons.md-24 {
+    font-size: 24px;
+  }
+
+  .material-icons.md-36 {
+    font-size: 36px;
+  }
+
+  .material-icons.md-48 {
+    font-size: 48px;
+  }
+
+  .card .title {
+    width: 100%;
+    margin: 0;
     text-align: center;
-    color: #333;
+    margin-top: 30px;
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+  }
+
+  .card .text {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 13px;
+    text-align: center;
+    margin-top: 20px;
+    color: white;
+    font-weight: 200;
+    letter-spacing: 2px;
+    opacity: 0;
+    max-height: 0;
+    transition: all 0.3s ease;
+  }
+
+  .card:hover {
+    height: 270px;
+  }
+
+  .card:hover .info {
+    height: 90%;
+  }
+
+  .card:hover .text {
+    transition: all 0.3s ease;
+    opacity: 1;
+    max-height: 40px;
+  }
+
+  .card:hover .icon {
+    background-position: -120px;
+    transition: all 0.3s ease;
+  }
+
+  .card:hover .icon i {
+    background: linear-gradient(90deg, #FF7E7E, #FF4848);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: 1;
+    transition: all 0.3s ease;
+  }
+
+
+.margin{
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 
-@media screen and (min-width: 500px){
-    .card-wrapper{
-        width: 100%;
-        float: left;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }
-
-/* section edn*/
-
-footer {
-        background-color: #fff8f8;
-        position: relative;
-        height: 100px;
-        margin-top: -100px;
-        clear: both;
-        padding: 60px;
-    }
-
-.social-links{
-        list-style: none;
-        float: right;
-    }
-
-.social-links li{
-        display: inline-block;
-        margin-right: 20px;
-    }
+.video{
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+   border-radius: 10px;
+   border-color: black;
+}
