--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body {
 
 .main-nav {
   list-style: none;
-  background-color: brown;
+  background-color: #211545;
   font-size: 120%;
   border-right: 1px solid #bbb;
 }
@@ -179,13 +179,15 @@ h2:after {
 
   /* section edn*/
   footer {
-    background-color: #fff8f8;
+    background-color: #211545;
+    color: #fff
     position: relative;
     height: 100px;
     margin-top: -100px;
     clear: both;
     padding: 60px;
   }
+
 
   .social-links {
     list-style: none;
@@ -201,7 +203,7 @@ h2:after {
     width: 100%;
     max-width: 300px;
     min-width: 200px;
-    height: 250px;
+    height: 380px;
     background-color: #292929;
     margin: 10px;
     border-radius: 10px;
@@ -235,7 +237,7 @@ h2:after {
   }
 
   .material-icons.md-18 {
-    font-size: 18px;
+    font-size: 24px;
   }
 
   .material-icons.md-24 {
@@ -243,11 +245,11 @@ h2:after {
   }
 
   .material-icons.md-36 {
-    font-size: 36px;
+    font-size: 24px;
   }
 
   .material-icons.md-48 {
-    font-size: 48px;
+    font-size: 24px;
   }
 
   .card .title {
@@ -276,7 +278,7 @@ h2:after {
   }
 
   .card:hover {
-    height: 270px;
+    height: 400px;
   }
 
   .card:hover .info {
@@ -313,6 +315,7 @@ h2:after {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 10px;
    border-color: black;
+   margin-top: 10px;
 }
 
 
@@ -364,7 +367,7 @@ h2:after {
 .openbtn {
   font-size: 20px;
   cursor: pointer;
-  background-color: #111;
+  background-color: #211545;
   color: white;
   padding: 10px 15px;
   border: none;
