--- a/main.css
+++ b/main.css
@@ -195,8 +195,9 @@ p{
     width:360px;
     font-size: 16px;
     margin: 30px;
-    height: 360px;
+    height: 500px;
     background-color: #ebeef8;
+    border-radius: 5px;
 }
 
 .card-wrapper{
@@ -223,6 +224,56 @@ p{
     color: black;
     margin-top: 10px;
 }
+.container-p{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #b342f4;
+
+}
+.subheading{
+  margin-bottom: 0px;
+  margin-top: 0px;
+  color: white;
+  background-color: #b342f4;
+  border-top-left-radius: 5px;
+  border-top-right-radius:  5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button{
+  background-color: white;
+  color: black;
+  border: 2px solid #008CBA;
+}
+
+.button:hover{
+  background-color: #008CBA;
+  color: white;
+}
+
+.button-style{
+  padding-bottom: 20px;
+  padding-top: 20px;
+
+}
+
 
 .card h3{
     text-align: center;
@@ -301,10 +352,3 @@ footer {
 
 
     }
-
-
-
-
-
-
-
