--- a/main.css
+++ b/main.css
@@ -6,10 +6,13 @@
 }
 
 .html {
-    background-color: #fff;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+}
+
+body{
+  background-color: #efefea;
 }
 
 .widthsize{
@@ -195,8 +198,8 @@ p{
     width:360px;
     font-size: 16px;
     margin: 30px;
-    height: 550px;
-    background-color: #ebeef8;
+    height: 520px;
+    background-color: #fff;
     border-radius: 5px;
 }
 
@@ -228,6 +231,7 @@ p{
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 2px solid #b342f4;
+  height: 100px;
 
 }
 
@@ -239,12 +243,27 @@ p{
   margin-bottom: 0px;
   margin-top: 0px;
   color: white;
-  background-color: #b342f4;
+  background-color: #a0afd6;
   border-top-left-radius: 5px;
   border-top-right-radius:  5px;
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: left;
+  width: 100%;
+  height: 90px;
+}
+.subheading-2{
+  margin-bottom: 0px;
+  margin-top: 0px;
+  color: white;
+  background-color: #a0afd6;
+  border-top-left-radius: 5px;
+  border-top-right-radius:  5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+  width: 100%;
+  height: 90px;
 }
 
 .button {
@@ -283,11 +302,11 @@ p{
 
 .card h3{
     text-align: center;
-    font-size:30px;
+    font-size: 25px;
 }
 
 .card p{
-    text-align:left;
+    text-align:center;
     font-size:18px;
     font-family:Calibri;
     padding-left: 10px;
