--- a/main.css
+++ b/main.css
@@ -179,11 +179,18 @@ p{
     font-size:17px;
 }
 
+h5{
+  font-size: 27px;
+  padding-bottom: 20px;
+}
+
 .long-copy {
     line-height: 145%;
-    width: 70%;
+    width:35%;
     margin-left: 15%;
     margin-top: 10px;
+    padding: 20px 20px;
+    background: #fff;
 }
 
 <!---->
@@ -231,7 +238,7 @@ p{
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 2px solid #b342f4;
-  height: 100px;
+  height: 110px;
 
 }
 
