--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@
 }
 
 body{
-  background-color: #efefea;
+  background-color:#ede5ce;
 }
 
 .widthsize{
@@ -27,7 +27,7 @@ body{
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #211545;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -36,8 +36,8 @@ body{
 .sidebar a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
-  color: #818181;
+  font-size: 21px;
+  color: #fff;
   display: block;
   transition: 0.3s;
 }
@@ -57,7 +57,7 @@ body{
 .openbtn {
   font-size: 20px;
   cursor: pointer;
-  background-color: #111;
+  background-color: #211545;
   color: white;
   padding: 10px 15px;
   border: none;
@@ -120,7 +120,6 @@ body{
 
 .main-nav li{
     display: inline-block;
-    margin-left: 20px;
     padding: 15px;
     border-right:1px solid #bbb;
 }
@@ -130,8 +129,7 @@ body{
     padding: 8px 0;
     color: #fff;
     text-decoration: none;
-    text-transform: uppercase;
-    font-size: 90%;
+    font-size: 100%;
     border-bottom: 2px solid transparent;
     transition: border-bottom;
 }
@@ -166,7 +164,7 @@ li:last-child {
 h2{
     font-weight: 300;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 50px;
     font-family:Calibri;
     word-spacing: 2px;
     text-align: center;
@@ -250,7 +248,7 @@ h5{
 .container-p{
   padding-top: 20px;
   padding-bottom: 20px;
-  border-bottom: 2px solid #b342f4;
+  border-bottom: 2px solid #211545;
   height: 110px;
 
 }
@@ -263,7 +261,7 @@ h5{
   margin-bottom: 0px;
   margin-top: 0px;
   color: white;
-  background-color: #a0afd6;
+  background-color: #008CBA;
   border-top-left-radius: 5px;
   border-top-right-radius:  5px;
   padding-top: 20px;
@@ -276,7 +274,7 @@ h5{
   margin-bottom: 0px;
   margin-top: 0px;
   color: white;
-  background-color: #a0afd6;
+  background-color: #008CBA;
   border-top-left-radius: 5px;
   border-top-right-radius:  5px;
   padding-top: 20px;
