--- a/Homepage/main.css
+++ b/Homepage/main.css
@@ -134,10 +134,52 @@ body{
     transition: border-bottom;
 }
 
-li:last-child {
+.main-nav li:last-child {
     border-right: none;
     float: right;
 }
+
+.second-nav{
+  width:100%;
+  background: #00316b;
+
+}
+
+.second-ul{
+  width:80%;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.second-ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 20px;
+}
+
+.second-ul li:hover{
+  background: #e91e63;
+}
+
+.second-ul li a{
+  color:#fff;
+  text-decoration: none;
+}
+
+.toggle{
+  width: 100%;
+  padding: 10px 20px;
+  background: #001f44;
+  text-align: right;
+  box-sizing: border-box;
+  color: #fff;
+  font-size: 30px;
+  display: none;
+
+
+}
+
+
 
 .searchbar{
     float: right;
@@ -353,6 +395,24 @@ footer {
 }
 
 /*Small phones: from 0 to 480px */
+@media (max-width:768px){
+  .toggle{
+    display: block;
+  }
+  .second-ul{
+    width:100%;
+    display: none;
+  }
+  .second-ul li{
+    display: block;
+    text-align: center;
+  }
+  .active{
+    display: block;
+  }
+}
+
+
 @media only screen and (min-width: 320px) {
     .card-wrapper {
         width: 100%;
@@ -399,4 +459,3 @@ footer {
         border: 0;
     }
 }
-
