--- a/Homepage/main.css
+++ b/Homepage/main.css
@@ -142,6 +142,8 @@ body{
 .second-nav{
   width:100%;
   background: #ffffff;
+  position: fixed;
+  top:0;
 
 }
 
@@ -398,6 +400,10 @@ footer {
 @media (max-width:768px){
   .toggle{
     display: block;
+  }
+  .second-nav{
+    position: fixed;
+    top: 0;
   }
   .second-ul{
     width:100%;
