added video tag instead of iframe. deteled some unnecessary files such as images and .idea and sub.css
Signed-off-by: YousufD2 <48338941+YousufD2@users.noreply.github.com>

--- a/Homepage/main.css
+++ b/Homepage/main.css
@@ -467,11 +467,10 @@ footer {
     }
 }
 
-iframe{
-  width: 70%;
-  height: 28rem;
+video{
+  width: 75%;
+  height: auto;
 }
-
 
 .image-front{
   width: 100%;
